[metadata]
name = dowml
version = 0.1.0
author = Xavier Nodet
author_email = xavier.nodet@fr.ibm.com
description = Submit existing Decision Optimization instances to WML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBMDecisionOptimization/dowml
project_urls =

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
#py_modules = ["dowml"]
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dowml = dowml.interactive:interactive
