[metadata]
name = dowml
version = attr: dowml.VERSION
author = Xavier Nodet
author_email = xavier.nodet@gmail.com
description = Submit existing Decision Optimization instances to WML
long_description = file: README.md, CHANGES.txt
long_description_content_type = text/markdown
url = https://github.com/nodet/dowml
project_urls =

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8

install_requires =
    ibm-watson-machine-learning >= 1.0.95.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dowml = dowml.interactive:interactive

[flake8]
max-line-length = 120